--- a/posicionamento/clear.css
+++ b/posicionamento/clear.css
@@ -1,24 +1,7 @@
-.wrapper{
-    border:1px solid black;
-    padding:10px;
-  }
-  .both {
-    border: 1px solid black;
-    clear: both;
-  }
-  .black {
+img {
     float: left;
-    margin: 0;
-    background-color: black;
-    color: #fff;
-    width:20%;
-  }
-  .red {
-    float: right;
-    margin: 0;
-    background-color: pink;
-    width:20%;
-  }
-  p {
-    width: 45%;
-  }
+}
+
+.clear {
+    clear: both;
+}
