--- a/projeto/styles.css
+++ b/projeto/styles.css
@@ -1,7 +1,15 @@
+body {
+    background-color: black;
+}
+
 .caixa-superior {
     background-image: url("beers.jpg");
     height: 100vh;
     background-size: cover;
+}
+
+.logo {
+    position: absolute;
 }
 
 .cabeçalho {
@@ -15,7 +23,6 @@
     display: inline;
     font-family: 'Monoton', cursive;
     text-shadow: 2px 2px 5px rgb(92, 92, 231);
-
 }
 
 .link-cabeçalho {
@@ -110,7 +117,6 @@ button {
     text-align: center;
     padding-top: 50px;
     text-shadow: 2px 2px 5px black;
-    text-align: center;
 }
 
 .paragrafo-meio {
@@ -135,7 +141,6 @@ button {
     text-align: center;
     padding-top: 50px;
     text-shadow: 2px 2px 5px black;
-    text-align: center;
 }
 
 .paragrafo-inferior {
